# buildbox

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  buildbox.toml  shell.nix
buildbox/: BUILD.bazel  agent.rs  config.rs  main.rs
buildbox/common/: BUILD.bazel  config.rs  error.rs  hash.rs  lib.rs  rand.rs
buildbox/executor/: BUILD.bazel  executor.rs  lib.rs  local.rs
buildbox/internal/: BUILD.bazel  blob.rs  config.rs  error.rs  exec.rs  hash.rs  lib.rs  proto.rs  rand.rs
buildbox/proto/: BUILD.bazel  lib.rs
buildbox/proto/bazel/: BUILD.bazel
buildbox/proto/buildbox/: BUILD.bazel  buildbox.proto
buildbox/rpc/: BUILD.bazel  action_cache.rs  bytestream.rs  capabilities.rs  cas.rs  execution.rs  fetch.rs  launcher.rs  lib.rs  push.rs
buildbox/rpc/bazel/: action_cache.rs  bytestream.rs  capabilities.rs  cas.rs  execution.rs  fetch.rs  mod.rs
buildbox/rpc/buildbox/: buildbox.rs  mod.rs
buildbox/sandbox/: BUILD.bazel  exec.rs  lib.rs  local.rs  sandbox.rs
buildbox/storage/: BUILD.bazel  blob.rs  file.rs  lib.rs  local.rs  mem.rs  proto.rs  storage.rs  store.rs  tee.rs
examples/: .bazelrc  client.crt  client.key  config.toml  server.crt  server.key
examples/helloworld/: .bazelrc  MODULE.bazel
server/: BUILD.bazel  blob.rs  error.rs  launcher.rs  main.rs  proto.rs
server/rpc/: action_cache.rs  bytestream.rs  capabilities.rs  cas.rs  execution.rs  fetch.rs  mod.rs  push.rs
tools/: regen_rust_project.sh
tools/bazel/toolchains/prost/: BUILD.bazel
