load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "buildbox",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//buildbox/common",
        "//buildbox/executor",
        "//buildbox/proto",
        "//buildbox/rpc",
        "//buildbox/storage",
        "@crates//:clap",
        "@crates//:tokio",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)
