load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_prost_library(
    name = "remote_asset_rust_proto",
    proto = "@google_apis_bazel//build/bazel/remote/asset/v1:remote_asset_proto",
)

rust_binary(
    name = "server",
    srcs = ["main.rs"],
    deps = [
        ":remote_asset_rust_proto",
        "@crates//:tokio",
        "@crates//:tonic",
    ],
)
