load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "server",
    srcs = glob(["**/*.rs"]),
    deps = [
        "//:google_apis_core",
        "//:google_apis_proto",
        "//:google_apis_rbe",
        "@crates//:bytes",
        "@crates//:clap",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:tonic",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)
