load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "common",
    srcs = glob(["**/*.rs"]),
    visibility = ["//buildbox:__subpackages__"],
    deps = [
        "@crates//:base64",
        "@crates//:data-encoding",
        "@crates//:rand",
        "@crates//:ring",
    ],
)
