load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

rust_library_group(
    name = "google_apis_core",
    visibility = ["//visibility:public"],
    deps = [
        ":bytestream_proto",
        ":code_proto",
        ":operations_proto",
        ":status_proto",
    ],
)

rust_library_group(
    name = "google_apis_rbe",
    visibility = ["//visibility:public"],
    deps = [
        ":remote_asset_proto",
        ":remote_execution_proto",
        ":semver_proto",
    ],
)

rust_library_group(
    name = "google_apis_proto",
    visibility = ["//visibility:public"],
    deps = [
        ":any_proto",
    ],
)

rust_prost_library(
    name = "bytestream_proto",
    proto = "@google_apis_core//google/bytestream:bytestream_proto",
)

rust_prost_library(
    name = "operations_proto",
    proto = "@google_apis_core//google/longrunning:operations_proto",
)

rust_prost_library(
    name = "status_proto",
    proto = "@google_apis_core//google/rpc:status_proto",
)

rust_prost_library(
    name = "code_proto",
    proto = "@google_apis_core//google/rpc:code_proto",
)

rust_prost_library(
    name = "remote_asset_proto",
    proto = "@google_apis_rbe//build/bazel/remote/asset/v1:remote_asset_proto",
)

rust_prost_library(
    name = "remote_execution_proto",
    proto = "@google_apis_rbe//build/bazel/remote/execution/v2:remote_execution_proto",
)

rust_prost_library(
    name = "semver_proto",
    proto = "@google_apis_rbe//build/bazel/semver:semver_proto",
)

rust_prost_library(
    name = "any_proto",
    proto = "@google_apis_proto//google/protobuf:any_proto",
)