load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

rust_library(
    name = "proto",
    srcs = glob(["**/*.rs"]),
    visibility = ["//buildbox:__subpackages__"],
    deps = [
        ":bytestream_proto",
        ":code_proto",
        ":operations_proto",
        ":status_proto",
        ":remote_asset_proto",
        ":remote_execution_proto",
        ":semver_proto",
        ":any_proto",
    ],
)

rust_prost_library(
    name = "bytestream_proto",
    proto = "@google_apis_core//google/bytestream:bytestream_proto",
)

rust_prost_library(
    name = "operations_proto",
    proto = "@google_apis_core//google/longrunning:operations_proto",
)

rust_prost_library(
    name = "status_proto",
    proto = "@google_apis_core//google/rpc:status_proto",
)

rust_prost_library(
    name = "code_proto",
    proto = "@google_apis_core//google/rpc:code_proto",
)

rust_prost_library(
    name = "remote_asset_proto",
    proto = "@google_apis_rbe//build/bazel/remote/asset/v1:remote_asset_proto",
)

rust_prost_library(
    name = "remote_execution_proto",
    proto = "@google_apis_rbe//build/bazel/remote/execution/v2:remote_execution_proto",
)

rust_prost_library(
    name = "semver_proto",
    proto = "@google_apis_rbe//build/bazel/semver:semver_proto",
)

rust_prost_library(
    name = "any_proto",
    proto = "@google_apis_proto//google/protobuf:any_proto",
)