load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "rpc",
    srcs = glob(["**/*.rs"]),
    visibility = ["//buildbox:__subpackages__"],
    deps = [
        "//buildbox/common",
        "//buildbox/proto",
        "//buildbox/sandbox",
        "//buildbox/storage",
        "@crates//:bytes",
        "@crates//:prost",
        "@crates//:prost-types",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tokio-stream",
        "@crates//:data-encoding",
        "@crates//:tonic",
        "@crates//:ring",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
    proc_macro_deps = [
        "@crates//:async-trait"
    ]
)
