load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "sandbox",
    srcs = glob(["**/*.rs"]),
    visibility = ["//buildbox:__subpackages__"],
    deps = [
        "//buildbox/common",
        "//buildbox/proto",
        "//buildbox/storage",
        "@crates//:tracing",
    ],
)
