load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "storage",
    srcs = glob(["**/*.rs"]),
    visibility = ["//buildbox:__subpackages__"],
    deps = [
        "//buildbox/common",
        "//buildbox/proto",
        "@crates//:bytes",
        "@crates//:prost",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "unit_tests",
    crate = ":storage",
)