load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

rust_library_group(
    name = "bazel",
    visibility = ["//:__subpackages__"],
    deps = [
        ":bytestream_proto_rs",
        ":code_proto_rs",
        ":operations_proto_rs",
        ":status_proto_rs",
        ":remote_asset_proto_rs",
        ":remote_execution_proto_rs",
        ":semver_proto_rs",
        ":any_proto_rs",
    ],
)

rust_prost_library(
    name = "bytestream_proto_rs",
    proto = "@google_apis_core//google/bytestream:bytestream_proto",
)

rust_prost_library(
    name = "operations_proto_rs",
    proto = "@google_apis_core//google/longrunning:operations_proto",
)

rust_prost_library(
    name = "status_proto_rs",
    proto = "@google_apis_core//google/rpc:status_proto",
)

rust_prost_library(
    name = "code_proto_rs",
    proto = "@google_apis_core//google/rpc:code_proto",
)

rust_prost_library(
    name = "remote_asset_proto_rs",
    proto = "@google_apis_rbe//build/bazel/remote/asset/v1:remote_asset_proto",
)

rust_prost_library(
    name = "remote_execution_proto_rs",
    proto = "@google_apis_rbe//build/bazel/remote/execution/v2:remote_execution_proto",
)

rust_prost_library(
    name = "semver_proto_rs",
    proto = "@google_apis_rbe//build/bazel/semver:semver_proto",
)

rust_prost_library(
    name = "any_proto_rs",
    proto = "@google_apis_proto//google/protobuf:any_proto",
)